attempt to fix background on safari

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -71,7 +71,7 @@ color: inherit;
 }
 
 header li {
-  margin: 16px;
+  margin: 15px;
 }
 
 footer p {
